--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <a href="/" class="nav__url astro-DMQPWCEC">
       Inicio
     </a><a href="./servicios/ciberseguridad" class="nav__url astro-DMQPWCEC">
-      Ciber
+      Ciberseguridad
     </a><a href="./servicios/diseno" class="nav__url astro-DMQPWCEC">
       Diseño
     </a><a href="./servicios/marketing" class="nav__url astro-DMQPWCEC">
@@ -140,7 +140,7 @@ Pagas / SEM / Correo electrónico y SMS / Whatsapp</p></article></a></div><div c
 </article>
 
 <article class="slogan astro-KGGSJSM4">
-  <h2 class="slogan__title astro-KGGSJSM4">Trabajamos desde cualquier lugar del mundo.</h2>
+  <h2 class="slogan__title astro-KGGSJSM4">Trabajamos desde cualquier parte del mundo.</h2>
 </article>
   <section class="locations astro-DGFOYAX6">
   <div class="locations__content container astro-DGFOYAX6">
