--- a/servicios/desarrollo/index.html
+++ b/servicios/desarrollo/index.html
@@ -83,7 +83,7 @@
   <section class="section-two astro-ULBHQ4JY">
   <div class="container astro-ULBHQ4JY">
     <h3 class="subservicios-cat astro-ULBHQ4JY">SOLUCIONES EXPERTAS PARA SU NEGOCIO</h3>
-    <h2 class="subservicios-title astro-ULBHQ4JY">Revolutionice su negocio con soluciones de desarrollo de vanguardia.</h2>
+    <h2 class="subservicios-title astro-ULBHQ4JY">Renueve su negocio con soluciones de desarrollo de vanguardia.</h2>
     <ul class="subservicios-list astro-ULBHQ4JY">
       <li class="subservicios-item astro-ULBHQ4JY">Web</li><li class="subservicios-item astro-ULBHQ4JY">E-commerce</li><li class="subservicios-item astro-ULBHQ4JY">Apps</li>
     </ul>
