--- a/en/services/cybersecurity/index.html
+++ b/en/services/cybersecurity/index.html
@@ -85,7 +85,7 @@
     <h3 class="subservicios-cat astro-ULBHQ4JY">ADVANCED CYBERSECURITY</h3>
     <h2 class="subservicios-title astro-ULBHQ4JY">Keep your data safe with our advanced cybersecurity solutions.</h2>
     <ul class="subservicios-list astro-ULBHQ4JY">
-      <li class="subservicios-item astro-ULBHQ4JY">Ethical Hacking</li><li class="subservicios-item astro-ULBHQ4JY">Forensic Informatics</li><li class="subservicios-item astro-ULBHQ4JY">WPT</li><li class="subservicios-item astro-ULBHQ4JY">Hardering Appliances</li><li class="subservicios-item astro-ULBHQ4JY">BCP</li><li class="subservicios-item astro-ULBHQ4JY">DRP</li><li class="subservicios-item astro-ULBHQ4JY">Risk Management Security</li><li class="subservicios-item astro-ULBHQ4JY">SGSI</li><li class="subservicios-item astro-ULBHQ4JY">Monitoring</li>
+      <li class="subservicios-item astro-ULBHQ4JY">Ethical Hacking</li><li class="subservicios-item astro-ULBHQ4JY">Forensic Informatics</li><li class="subservicios-item astro-ULBHQ4JY">WPT</li><li class="subservicios-item astro-ULBHQ4JY">Hardering Apps</li><li class="subservicios-item astro-ULBHQ4JY">BCP</li><li class="subservicios-item astro-ULBHQ4JY">DRP</li><li class="subservicios-item astro-ULBHQ4JY">Risk Management Security</li><li class="subservicios-item astro-ULBHQ4JY">SGSI</li><li class="subservicios-item astro-ULBHQ4JY">Monitoring</li>
     </ul>
   </div>
   <div class="content-svg astro-ULBHQ4JY">
