--- a/servicios/ciberseguridad/index.html
+++ b/servicios/ciberseguridad/index.html
@@ -85,7 +85,7 @@
     <h3 class="subservicios-cat astro-ULBHQ4JY">CIBERSEGURIDAD AVANZADA</h3>
     <h2 class="subservicios-title astro-ULBHQ4JY">Mantenga sus datos seguros con nuestras soluciones avanzadas de ciberseguridad.</h2>
     <ul class="subservicios-list astro-ULBHQ4JY">
-      <li class="subservicios-item astro-ULBHQ4JY">Hacking ético</li><li class="subservicios-item astro-ULBHQ4JY">Informática forense</li><li class="subservicios-item astro-ULBHQ4JY">WPT</li><li class="subservicios-item astro-ULBHQ4JY">Electrodomésticos de endurecimiento</li><li class="subservicios-item astro-ULBHQ4JY">BCP</li><li class="subservicios-item astro-ULBHQ4JY">DRP</li><li class="subservicios-item astro-ULBHQ4JY">Seguridad en la gestión de riesgos</li><li class="subservicios-item astro-ULBHQ4JY">SGSI</li><li class="subservicios-item astro-ULBHQ4JY">Monitoreo</li>
+      <li class="subservicios-item astro-ULBHQ4JY">Hacking ético</li><li class="subservicios-item astro-ULBHQ4JY">Informática forense</li><li class="subservicios-item astro-ULBHQ4JY">WPT</li><li class="subservicios-item astro-ULBHQ4JY">Hardering de dispositivos</li><li class="subservicios-item astro-ULBHQ4JY">BCP</li><li class="subservicios-item astro-ULBHQ4JY">DRP</li><li class="subservicios-item astro-ULBHQ4JY">Seguridad en la gestión de riesgos</li><li class="subservicios-item astro-ULBHQ4JY">SGSI</li><li class="subservicios-item astro-ULBHQ4JY">Monitoreo</li>
     </ul>
   </div>
   <div class="content-svg astro-ULBHQ4JY">
